--- a/model-1_model-2/instance_segmentation_and_model_testing.ipynb
+++ b/model-1_model-2/instance_segmentation_and_model_testing.ipynb
@@ -77,7 +77,7 @@
       "source": [
         "import requests\n",
         "from pymongo import  MongoClient\n",
-        "conn = MongoClient(\"mongodb+srv://Vasu:htccg321@cluster0-miow4.mongodb.net/test?authSource=admin&replicaSet=Cluster0-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass&retryWrites=true&ssl=true\")"
+        "conn = MongoClient(\"mongodb+srv://devuubavaria:Devubavaria2002@cluster0.imppc.mongodb.net/?retryWrites=true&w=majority")"
       ],
       "execution_count": null,
       "outputs": []
